Updated the transaction entrypoint to be available publically Added parameters to the transactions list entrypoint (see swagger documentation)
